NetBSD Problem Report #46612

From lloyd@bob.localdomain  Mon Jun 18 00:08:00 2012
Return-Path: <lloyd@bob.localdomain>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id A4C4163B8CC
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 18 Jun 2012 00:08:00 +0000 (UTC)
Message-Id: <20120618000756.22DC06E44C@bob.localdomain>
Date: Mon, 18 Jun 2012 12:07:56 +1200 (NZST)
From: lloyd@must-have-coffee.gen.nz
Reply-To: lloyd@must-have-coffee.gen.nz
To: gnats-bugs@gnats.NetBSD.org
Subject: ntpdc error message problem
X-Send-Pr-Version: 3.95

>Number:         46612
>Category:       bin
>Synopsis:       ntpdc error message problem
>Confidential:   no
>Severity:       non-critical
>Priority:       high
>Responsible:    jnemeth
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jun 18 00:10:00 +0000 2012
>Closed-Date:    Thu Jul 05 03:07:13 +0000 2012
>Last-Modified:  Thu Jul 05 03:07:13 +0000 2012
>Originator:     Lloyd Parkes
>Release:        NetBSD 6.0_BETA2
>Organization:
Must Have Coffee
>Environment:
System: NetBSD bob 6.0_BETA2 NetBSD 6.0_BETA2 (GENERIC) #0: Mon Jun 18 04:57:29 NZST 2012 lloyd@bob:/vol/scratch/build6/obj.i386/sys/arch/i386/compile/GENERIC i386
Architecture: i386
Machine: i386
>Description:

When "ntpdc -p" prints out a connection refused, it doesn't print a newline
at the end of the line. I get this:

	bob-6.0_BETA2$ ntpdc -p
	ntpdc: read: Connection refusedbob-6.0_BETA2$ 
	bob-6.0_BETA2$ send-pr 

instead of this:

        bob-6.0_BETA2$ ntpdc -p
	ntpdc: read: Connection refused
	bob-6.0_BETA2$ sudo vi /etc/rc.conf

I gave this a high priority because of the upcoming NetBSD 6.0 release.

>How-To-Repeat:
Run "ntpdc -p" on a host that isn't running ntpd.
>Fix:
Left as an exercise for the reader.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: bin-bug-people->jnemeth
Responsible-Changed-By: jnemeth@NetBSD.org
Responsible-Changed-When: Mon, 25 Jun 2012 20:24:32 +0000
Responsible-Changed-Why:
I'm working on it.


State-Changed-From-To: open->feedback
State-Changed-By: jnemeth@NetBSD.org
State-Changed-When: Mon, 25 Jun 2012 20:24:32 +0000
State-Changed-Why:
I committed a fix which should fix the problem.  Can you test it, please?


From: "John Nemeth" <jnemeth@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46612 CVS commit: src/external/bsd/ntp/dist/ntpdc
Date: Mon, 25 Jun 2012 20:23:43 +0000

 Module Name:	src
 Committed By:	jnemeth
 Date:		Mon Jun 25 20:23:43 UTC 2012

 Modified Files:
 	src/external/bsd/ntp/dist/ntpdc: ntpdc.c

 Log Message:
 PR/46612 - Lloyd Parkes -- add a terminating newline to error messages


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/external/bsd/ntp/dist/ntpdc/ntpdc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Lloyd Parkes <lloyd@must-have-coffee.gen.nz>
To: gnats-bugs@NetBSD.org
Cc: jnemeth@NetBSD.org
Subject: Re: bin/46612 (ntpdc error message problem)
Date: Wed, 27 Jun 2012 19:52:58 +1200

 --Apple-Mail=_B7D5547C-D06C-4016-A7C1-8D8FFB4F0DF3
 Content-Transfer-Encoding: quoted-printable
 Content-Type: text/plain;
 	charset=us-ascii


 On 26/06/2012, at 8:24 AM, jnemeth@NetBSD.org wrote:
 > I committed a fix which should fix the problem.  Can you test it, =
 please?

 It took longer to update CVS than to rebuild. It works fine for me now =
 (in -current of course).

 Cheers,
 Lloyd


 --Apple-Mail=_B7D5547C-D06C-4016-A7C1-8D8FFB4F0DF3
 Content-Transfer-Encoding: 7bit
 Content-Disposition: attachment;
 	filename=signature.asc
 Content-Type: application/pgp-signature;
 	name=signature.asc
 Content-Description: Message signed with OpenPGP using GPGMail

 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG/MacGPG2 v2.0.18 (Darwin)

 iQEcBAEBAgAGBQJP6rvhAAoJEHepcGU/6jMp2Y0H/iUjjqoVLOptaehc+wkiiPu+
 OtO/5wW2H/mY6zAIWw/iKwNvyq+ZBFtQNy4RCIVyZCQBz1KcoBQ83U4koMnMG5Ix
 rWUoN4Xns4PY6oLqOwnknFlisiN6fAeSZwhSswDw3JexStFWeo8Piaf+gvhkbcMX
 cuha3IuLWTdC9xeOAsQ3Kg2UltFkVc9a6nurLzE4N7dGcqGLNaXtOkPd37AbaieD
 AWoVzhFZDTUAkGWnFpPmFO6bgjm+mTnu1ijrwmDUIDBr4/KQRdI9k1mLNFpHx/gG
 6WRdPjWeAypfRLO8TTU3ElmVEQglnz11Mf1f3j4BEkp3VtfLZZC62d5fQtthqhE=
 =Lpg+
 -----END PGP SIGNATURE-----

 --Apple-Mail=_B7D5547C-D06C-4016-A7C1-8D8FFB4F0DF3--

State-Changed-From-To: feedback->pending-pullups
State-Changed-By: jnemeth@NetBSD.org
State-Changed-When: Thu, 28 Jun 2012 02:51:49 +0000
State-Changed-Why:
submitter comfirms that patch fixes problem, pullup requested:  [pullup-6 #387]


From: "Julian Coleman" <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46612 CVS commit: [netbsd-6] src/external/bsd/ntp/dist/ntpdc
Date: Wed, 4 Jul 2012 20:55:45 +0000

 Module Name:	src
 Committed By:	jdc
 Date:		Wed Jul  4 20:55:44 UTC 2012

 Modified Files:
 	src/external/bsd/ntp/dist/ntpdc [netbsd-6]: ntpdc.c

 Log Message:
 Pull up revision 1.6 (requested by jnemeth in ticket #387).

 PR/46612 - Lloyd Parkes -- add a terminating newline to error messages


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.5.2.1 src/external/bsd/ntp/dist/ntpdc/ntpdc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: jnemeth@NetBSD.org
State-Changed-When: Thu, 05 Jul 2012 03:07:13 +0000
State-Changed-Why:
pullup completed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.