Pull up revision 1.6 (requested by jnemeth in ticket #387).

PR/46612 - Lloyd Parkes -- add a terminating newline to error messages